# Speeky

./: .gitignore  README.md  Speeky_Ai_user_stories_Recounted 2.docx  User_Stories.txt  main.py  requirements.txt
backend/: .env.example  .gitignore  README.md  app.js  docker-compose.yml  main.py  package-lock.json  package.json  pyproject.toml  server.js
backend/controllers/: auth_controller.js
backend/data/: accent_passages.json  assessment_qs.json  pronunciation_sentences.json
backend/lib/: ai_client.py  audio_io.py  confidence_engine.py  grammar_checker.py  kv_store.py  livekit_tokens.py  llm_client.py  pii.py  prisma.js  prisma_client.py  prompts.py  prosody_engine.py  recording_engine.py  session_scorer.py  speech_config.py  stt_engine.py  text_alignment.py  tts_client.py  vad_engine.py
backend/middlewares/: auth.middleware.js  auth_middleware.py  errorHandler.js  error_handler.py
backend/prisma/: schema.prisma
backend/routers/: accent_routes.py  assessment_routes.py  auth_routes.py  coaching_routes.py  conversation_routes.py  interview_coach_routes.py  practice_time_routes.py  pronunciation_routes.py  public_speaking_routes.py  resume_jd_routes.py  scenario_routes.py  session_memory_routes.py  user_routes.py  vocabulary_progress_routes.py
backend/routes/: auth_routes.js
backend/schemas/: accent_schemas.py  assessment_schemas.py  auth_schemas.py  coaching_schemas.py  conversation_schemas.py  interview_coach_schemas.py  practice_time_schemas.py  pronunciation_schemas.py  public_speaking_schemas.py  resume_jd_schemas.py  scenario_schemas.py  session_memory_schemas.py  user_schemas.py
backend/scripts/: dev_all.py
backend/services/: accent_assessment_service.py  accent_profile_service.py  accent_progress_service.py  assessment_service.py  auth_serivce.py  coaching_service.py  conversation_service.py  gating_service.py  interview_coach_service.py  otp_service.py  practice_time_service.py  pronunciation_coach_service.py  public_speaking_service.py  reassessment_service.py  resume_jd_service.py  scenario_service.py  session_memory_service.py  user_service.py  vocabulary_progress_service.py
backend/tests/: conftest.py  test_coaching.py  test_conversation.py  (+6 more)
(+172 files in other folders)
