[project]
name = "speaky-ai-backend"
version = "0.1.0"
description = "FastAPI backend for Speaky AI"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "prisma>=0.15",
    "pydantic[email]>=2.9",
    "python-dotenv>=1.0",
    "pyjwt>=2.9",
    "bcrypt>=4.2",
    "aiosmtplib>=3.0",
    "httpx>=0.27",
    "slowapi>=0.1.10",
]

[tool.taskipy.tasks]
dev = "uvicorn main:app --reload"
dev-all = "uvicorn main:app --reload --host 0.0.0.0 --port 8000"
start = "uvicorn main:app"

prisma-generate = "prisma generate"
prisma-migrate = "prisma migrate dev"
prisma-pull = "prisma db pull"
prisma-studio = "prisma studio"

[dependency-groups]
dev = [
    "taskipy>=1.14.1",
]
