[project]
name = "speaky-ai-backend"
version = "0.1.0"
description = "FastAPI backend for Speaky AI"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "prisma>=0.15",
    "pydantic[email]>=2.9",
    "python-dotenv>=1.0",
    "pyjwt>=2.9",
    "bcrypt>=4.2",
    "aiosmtplib>=3.0",
    "httpx>=0.27",
    "slowapi>=0.1.10",
    "python-multipart>=0.0.12",
    "pillow>=11.0",
    "pypdf>=5.0",
    "python-docx>=1.1",
    "piper-tts>=1.3",
    "livekit-api>=1.2",
    # Pronunciation Coach (US-95) / Accent Assessment (US-93, US-89) -- see
    # lib/recording_engine.py for how these fit together.
    "faster-whisper>=1.0",
    "av>=13.0",
    "silero-vad>=5.1",
    "praat-parselmouth>=0.4.3",
    "numpy>=1.26",
    "pronouncing>=0.2.0",
]

[tool.taskipy.tasks]
dev = "uvicorn main:app --reload"
dev-all = "uvicorn main:app --reload --host 0.0.0.0 --port 8000"
dev-full = "python scripts/dev_all.py"
start = "uvicorn main:app"

prisma-generate = "prisma generate"
prisma-migrate = "prisma migrate dev"
prisma-pull = "prisma db pull"
prisma-studio = "prisma studio"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[dependency-groups]
dev = [
    "taskipy>=1.14.1",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
